tests/ui/no-impl.stderr
error[E0599]: no method named `anyhow_kind` found for type `&Error` in the current scope
 --> $DIR/no-impl.rs:7:13
  |
7 |     let _ = anyhow!(Error);
  |             ^^^^^^^^^^^^^^ method not found in `&Error`
  |
  = note: the method `anyhow_kind` exists but the following trait bounds were not satisfied:
          `&Error : anyhow::kind::AdhocKind`
          `&Error : anyhow::kind::TraitKind`
          `Error : anyhow::kind::TraitKind`
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `anyhow_kind`, perhaps you need to implement one of them:
          candidate #1: `anyhow::kind::AdhocKind`
          candidate #2: `anyhow::kind::TraitKind`
          candidate #3: `anyhow::kind::BoxedKind`
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
